Fixed z-index issue with dropdown menu

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@
     background-color: rgb(252, 242, 228);
 }
 
+.menu-z-index {
+    z-index: 14;
+}
+
 .screenshot-carousel {
     max-width: 50vw;
 }
@@ -27,4 +31,3 @@
         max-width: 95vw;
     }
 }
-/* @media screen and (min-width: 40em) and (max-width: 63.9375em) {} */
